--- a/compose.yml
+++ b/compose.yml
@@ -1,13 +1,30 @@
 services:
+  jspark:
+    image: quay.io/jupyter/all-spark-notebook:2024-10-20
+    container_name: jspark-container
+    restart: always
+    ports:
+      - "8888:8888"
+    volumes:
+      - jspark:/home/joyvan/work
+      - jspark-config:/home/joyvan/.jupyter
+      - ./jspark/startup_scripts:/home/jovyan/.ipython/profile_default/startup:ro
+    networks:
+      - kafka_connect
+
   postgres:
     image: postgres:17-bookworm
     container_name: postgres-container
     restart: always
+    ports:
+      - 5432:5432
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: dvdrental
     volumes:
-      - db:/var/lib/postgresql/data
+      - db:/var/lib/postgresql/data 
+      - ./postgres/server-backups:/var/lib/postgresql/backups # If you want the dataset to persist, you need to comment postgres.command
     networks:
       - kafka_connect
 
@@ -59,6 +76,8 @@ services:
 volumes:
   db:
   pgadmin-data:
+  jspark:
+  jspark-config:
 
 networks:
   kafka_connect:
