--- a/compose.yml
+++ b/compose.yml
@@ -1,49 +1,4 @@
 services:
-  jspark:
-    image: quay.io/jupyter/all-spark-notebook:2024-10-20
-    container_name: jspark-container
-    restart: always
-    ports:
-      - "8888:8888"
-    volumes:
-      - jspark:/home/joyvan/work
-      - jspark-config:/home/joyvan/.jupyter
-      - ./jspark/startup_scripts:/home/jovyan/.ipython/profile_default/startup:ro
-    networks:
-      - kafka_connect
-
-  postgres:
-    image: postgres:17-bookworm
-    container_name: postgres-container
-    restart: always
-    ports:
-      - 5432:5432
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: dvdrental
-    volumes:
-      - db:/var/lib/postgresql/data 
-      - ./postgres/server-backups:/var/lib/postgresql/backups # If you want the dataset to persist, you need to comment postgres.command
-    networks:
-      - kafka_connect
-
-  pgadmin:
-      image: dpage/pgadmin4:8
-      container_name: pgadmin-container
-      restart: always
-      ports:
-        - "5050:80"
-      depends_on:    
-        - postgres
-      environment:
-        PGADMIN_DEFAULT_EMAIL: ${PGADMIN_USER}
-        PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
-      volumes:
-        - pgadmin-data:/var/lib/pgadmin
-      networks:
-      - kafka_connect
-
 #  debezium:
 #      image: debezium/connect:2.7.3.Final
 #      container_name: debezium-container
@@ -73,11 +28,63 @@ services:
 #      networks:
 #        - kafka_connect
 
-volumes:
-  db:
-  pgadmin-data:
   jspark:
-  jspark-config:
+    build:
+      context: ./jspark
+      dockerfile: dockerfile
+    container_name: jspark-container
+    environment:
+      JSPARK_TOKEN: ${JSPARK_TOKEN}
+    restart: always
+    volumes:
+      - jspark-home:/home/jovyan/work
+    networks:
+      - kafka_connect
+    ports:
+      - ${JSPARK_PORT}:8888
+
+  pgadmin:
+      image: dpage/pgadmin4:8
+      container_name: pgadmin-container
+      depends_on:    
+        - postgres
+      environment:
+        PGADMIN_DEFAULT_EMAIL: ${PGADMIN_USER}
+        PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+      restart: always
+      volumes:
+        - pgadmin-data:/var/lib/pgadmin
+      networks:
+      - kafka_connect
+      ports:
+        - ${PGADMIN_PORT}:80
+
+  postgres:
+    image: postgres:17-bookworm
+    container_name: postgres-container
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: dvdrental
+    restart: always
+    volumes:
+      - postgres-data:/var/lib/postgresql/data 
+      - ./postgres/server-backups:/var/lib/postgresql/backups
+    networks:
+      - kafka_connect
+    ports:
+      - ${POSTGRES_PORT}:5432
+
+volumes:
+  # jspark volumes
+  jspark-home:
+    external: true
+  # pgadmin volumes
+  pgadmin-data:
+    external: true
+  #postgres volumes
+  postgres-data:
+    external: true
 
 networks:
   kafka_connect:
