--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,82 @@
 services:
+
+  nginx:
+    image: nginx
+    container_name: nginx-container
+    depends_on:
+      - mysql
+      - jspark
+      - pgadmin
+      - postgres
+    restart: always
+    volumes:
+      - ./nginx/index.html:/usr/share/nginx/index.html
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - nginx_network
+    ports:
+      - ${NGINX_PORT}:80
+
+  mysql:
+    image: mysql
+    container_name: mysql-container
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+    restart: always
+    volumes:
+      - mysql-data:/var/lib/mysql
+    networks:
+      - nginx_network
+    #ports:
+    #  - ${MYSQL_PORT}:3306
+
+  jspark:
+    build:
+      context: ./jspark
+      dockerfile: dockerfile
+    container_name: jspark-container
+    environment:
+      JSPARK_TOKEN: ${JSPARK_TOKEN}
+      JUPYTER_ENABLE_LAB: yes
+      JUPYTERHUB_SERVICE_PREFIX: /jupyterlab/
+    restart: always
+    volumes:
+      - jspark-home:/home/jovyan/work
+    networks:
+      - nginx_network
+
+  pgadmin:
+    image: dpage/pgadmin4:8
+    container_name: pgadmin-container
+    depends_on:    
+      - postgres
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_USER}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+      PGADMIN_DISABLE_POSTFIX: true
+      SCRIPT_NAME: /pgadmin
+    restart: always
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    networks:
+      - nginx_network
+
+  postgres:
+    image: postgres:17-bookworm
+    container_name: postgres-container
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: dvdrental
+    restart: always
+    volumes:
+      - postgres-data:/var/lib/postgresql/data 
+      - ./postgres/server-backups:/var/lib/postgresql/backups
+    networks:
+      - nginx_network
+    #ports:
+    #  - ${POSTGRES_PORT}:5432
+
 #  debezium:
 #      image: debezium/connect:2.7.3.Final
 #      container_name: debezium-container
@@ -28,53 +106,6 @@ services:
 #      networks:
 #        - kafka_connect
 
-  jspark:
-    build:
-      context: ./jspark
-      dockerfile: dockerfile
-    container_name: jspark-container
-    environment:
-      JSPARK_TOKEN: ${JSPARK_TOKEN}
-    restart: always
-    volumes:
-      - jspark-home:/home/jovyan/work
-    networks:
-      - kafka_connect
-    ports:
-      - ${JSPARK_PORT}:8888
-
-  pgadmin:
-      image: dpage/pgadmin4:8
-      container_name: pgadmin-container
-      depends_on:    
-        - postgres
-      environment:
-        PGADMIN_DEFAULT_EMAIL: ${PGADMIN_USER}
-        PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
-      restart: always
-      volumes:
-        - pgadmin-data:/var/lib/pgadmin
-      networks:
-      - kafka_connect
-      ports:
-        - ${PGADMIN_PORT}:80
-
-  postgres:
-    image: postgres:17-bookworm
-    container_name: postgres-container
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: dvdrental
-    restart: always
-    volumes:
-      - postgres-data:/var/lib/postgresql/data 
-      - ./postgres/server-backups:/var/lib/postgresql/backups
-    networks:
-      - kafka_connect
-    ports:
-      - ${POSTGRES_PORT}:5432
-
 volumes:
   # jspark volumes
   jspark-home:
@@ -85,7 +116,11 @@ volumes:
   #postgres volumes
   postgres-data:
     external: true
+  #mysql volumes
+  mysql-data:
+    external: true
+
 
 networks:
-  kafka_connect:
+  nginx_network:
     driver: bridge
